--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+.button {
+	padding: 4px 8px;
+	background: rgb(44, 44, 44);
+	color: white;
+	border-radius: 8px;
+}
