--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,22 @@
 }
 
 .button {
-	padding: 4px 8px;
+	padding: 4px 12px;
 	background: rgb(44, 44, 44);
 	color: white;
 	border-radius: 8px;
+}
+
+select {
+	border: 1px solid black;
+	padding: 4px;
+	cursor: pointer;
+	border-radius: 8px;
+}
+
+label > input {
+	border: 1px solid black;
+	padding: 4px;
+	border-radius: 8px;
+	width: 100%;
 }
